# customNote

./: .gitignore  Info_from_bases.py  README.md  TaskFiles.db  device_token.txt  flet.yaml  google-services.json  main.py  note_class.py  pyproject.toml  requirements.txt  service-account-key.json  txtFiles.db  voice.py
.github/workflows/: build-apk-android.yml
libs/: android_alarm.py  android_native.py
